make background white and prevent article name from wrapping unnecessarily

--- a/app/assets/stylesheets/home.styl
+++ b/app/assets/stylesheets/home.styl
@@ -12,6 +12,7 @@ body.print-article-viewer
   display flex
   flex-direction: column
   align-items center
+  background-color white
   .user-legend-wrap
     .user-legend
       margin 0
@@ -20,6 +21,7 @@ body.print-article-viewer
     flex-wrap wrap
     gap 5px
     justify-content end
+    width max-content
     :nth-child(1)
       display grid
       place-items center
